-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.8.3, 6.9.1, 6.10
-
None
-
-
e26e907a4 (dev), c6885e1a0 (6.10), 0ee203279 (6.9), f1db2cdea (tqtc/lts-6.8)
Please run the attached application on VxWorks on hardware and try to move the rectangles vertically.
It doesn't move at all.
Expected result, that it would move the same way it does on Desktop Linux and Windows.
For Gerrit Dashboard: QTBUG-138806 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
670947,1 | Fix Flickable not working on VxWorks | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: NEW | 0 | 0 |
669612,3 | Fix Flickable not working on VxWorks | dev | qt/qtbase | Status: MERGED | +2 | 0 |
670841,2 | Fix Flickable not working on VxWorks | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
670881,2 | Fix Flickable not working on VxWorks | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
671696,3 | Fix Flickable not working on VxWorks | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |