Fix Flickable not working on VxWorks

Forwarding evdev events individually caused multiple events to share identical
timestamps, leading to Qt failing to distinguish press and release actions.
This change introduces buffering and compression, similar to the Linux evdev
mouse handler, to ensure accurate event timing and recognition.

Task-number: QTBUG-138806
Pick-to: 6.9 6.8
Change-Id: I54aac2ae02cfbaf736b13785a36a9df8efa902c5
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit e26e907a472fbfaff7712406fbf55c84933f1e9a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>